[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "FRAME pallet for democracy"
edition = "2021"
homepage = "https://substrate.io"
license = "Apache-2.0"
name = "pallet-democracy"
readme = "README.md"
repository = "https://github.com/paritytech/substrate/"
version = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
  "derive",
] }
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
scale-info = { version = "2.1.1", default-features = false, features = [
  "derive",
] }
serde = { version = "1.0.136", optional = true, features = ["derive"] }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22" }

orml-traits = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "f709ed62262435b3ad80482d309e3575625d1e5b" }

[dev-dependencies]
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "f709ed62262435b3ad80482d309e3575625d1e5b" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
pallet-scheduler = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
std = [
  "codec/std",
  "frame-benchmarking/std",
  "frame-support/std",
  "frame-system/std",
  "scale-info/std",
  "serde",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
  "orml-traits/std",
]
try-runtime = ["frame-support/try-runtime"]
