[package]
name = "pallet-tokenized-options"
version = "0.1.0"
authors = ["Composable Developers"]
homepage = "https://composable.finance"
edition = "2021"


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
frame-benchmarking = { default-features = false, optional = true, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16' }

sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-arithmetic = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }

codec = { default-features = false, features = [
    "derive",
], package = "parity-scale-codec", version = "2.0.0" }
composable-traits = { version = "0.0.1", path = "../composable-traits", default-features = false }
log = { version = "0.4.14", default-features = false }
scale-info = { version = "1.0", default-features = false, features = [
    "derive",
] }
serde = { version = '1', optional = true }


[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.16" }
pallet-currency-factory = { path = "../currency-factory" }
pallet-vault = { default-features = false, path = "../vault"}
pallet-assets = { default-features = false, path = "../assets"}
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "2b1c9fb367ccb8e13601b2da43d1c5d9737b93c6" }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "2b1c9fb367ccb8e13601b2da43d1c5d9737b93c6" }
proptest = "1.0"
hex-literal = "0.3.3"

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking/std",
    "sp-runtime/std",
    "sp-arithmetic/std",
    "sp-io/std",
    "sp-core/std",
    "sp-std/std",
    "codec/std",
    "log/std",
    "scale-info/std",
    "serde/std",
]
runtime-benchmarks = ["frame-benchmarking"]