[package]
name = "pallet-tokenized-options"
version = "0.1.0"
authors = ["Composable Developers"]
homepage = "https://composable.finance"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
frame-benchmarking = { default-features = false, optional = true, git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.17' }

sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-arithmetic = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "9e041dc9d213f843b18b3008f32f3acabb287dcb", default-features = false}

codec = { default-features = false, features = [
    "derive",
], package = "parity-scale-codec", version = "2.0.0" }
composable-traits = { version = "0.0.1", path = "../composable-traits", default-features = false }
composable-support = { version = "0.0.1", path = "../composable-support", default-features = false }
log = { version = "0.4.14", default-features = false }
scale-info = { version = "1.0", default-features = false, features = [
    "derive",
] }
serde = { version = '1', optional = true }

[dev-dependencies]
governance-registry = { package = "pallet-governance-registry", path = "../governance-registry", default-features = false }
hex-literal = "0.3"
itertools = "0.10"
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "9e041dc9d213f843b18b3008f32f3acabb287dcb", default-features = false }
pallet-assets = { path = "../assets", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
pallet-currency-factory = { path = "../currency-factory", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
pallet-vault = { path = "../vault", default-features = false }
pallet-oracle = { default-features = false,  path = "../oracle" }

proptest = "1.0"

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking/std",
    "sp-runtime/std",
    "sp-arithmetic/std",
    "sp-io/std",
    "sp-core/std",
    "sp-std/std",
    "orml-traits/std",
    "pallet-oracle/std",
    "codec/std",
    "log/std",
    "scale-info/std",
    "serde/std",
]
runtime-benchmarks = ["frame-benchmarking"]
