[package]
edition = "2021"
name = "crowdloans-json"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.49.0"
aws-sdk-dynamodb = "0.19.0"
clap = { version = "4.0.17", features = ["derive"] }
csv = "1.1.6"
dotenvy = "0.15.6"
futures = "0.3.25"
reqwest = { version = "0.11.12", features = ["json"] }
rust_decimal = { version = "1.26.1", features = ["serde-with-str"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.87"
serde_with = "2.0.1"
time = { version = "0.3.15", features = [
  "serde",
  "serde-human-readable",
  "macros",
] }
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
