[package]
authors = ["Composable Developers"]
name = "dex-router-rpc"
version = "0.1.0"
edition = "2021"
homepage = "https://composable.finance"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27" }

composable-support = { path = "../../composable-support" }
composable-traits = { path = "../../composable-traits" }
pablo-runtime-api = { path = "../runtime-api" }

codec = { default-features = false, features = [
  "derive",
], package = "parity-scale-codec", version = "3.0.0" }
scale-info = { version = "2.1.1", default-features = false, features = [
  "derive",
] }

jsonrpsee = { version = "0.14.0", features = ["server", "macros"] }

